test-suite/bugs/bug_11816.v
(* This should be an error, not an anomaly *)
Fail Definition foo := fix foo (n : nat) { wf n n } := 0.
